Configure cloudinary for images uploading in production ENV Add Figaro for ENV Variables

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,7 +2,7 @@
 
   <%=b.input :title %>
   <%=b.input :body, :as => :text, :input_html => { 'rows' => 10, 'cols' => 10 } %>
-  <%=b.file_field :image %>
+  <%=b.file_field :image, direct_upload: true %>
   <br/>
   <%=b.button :submit, :class => 'btn-custom2' %>
 
