Add cloudinary config to upload imgaes only for production Fix ENV variables

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,7 +12,7 @@
         </a>
         <% if post.image.attached? %>
           <% if Rails.env.development? %>
-            <p class="post-image"><%= cl_image_tag post.image.key%></p>
+            <p class="post-image"><%= image_tag post.image%></p>
           <% elsif Rails.env.production? %>
             <p class="post-image"><%= cl_image_tag post.image.key%></p>
           <% end %>
